web: fix main content overflowing
Also removed some dead CSS

--- a/support/web/agda-cats.scss
+++ b/support/web/agda-cats.scss
@@ -59,7 +59,6 @@ article {
   padding-top: 2em;
   padding-bottom: 2em;
   margin-top: 0 !important;
-  width: 85ch;
   max-width: 100%;
 
   > :nth-child(1), > pre.Agda:first-of-type {
